--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </section>
         </div>
         <div id="footer">
-            dibuat oleh manusia separa cyborg dari angkasa lepas <br> <a href="https://imfunniee.github.io">imfunniee</a>
+            dibuat oleh manusia separa cyborg dari angkasa lepas <br> <a href="https://mangtx1337.github.io">imfunniee</a>
         </div>
     <script src="index.js" type="text/javascript"></script>
     <script src="particles.js"></script>
