--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
 
         <div class="about-content">
             <h3>Jejaka Tertampan Di Planet Tapops !<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Illo possimus quasi culpa temporibus perspiciatis labore quaerat impedit earum 
-                Illo possimus quasi culpa temporibu
-                Illo possimus quasi culpa temporibus perspiciatis labore quaerat impedit earum dolores pariatur incidunt, aliquam ea excepturi esse rem inventore quia non ipsa corporis suscipit dicta eveniet, commodi voluptatibus assumenda! Iusto et saepe fuga impedit.
+            <p>Orangnya peramah, boleh dikatakan tampan & maskulin. Dia terkenal di seantero planet Tapops. Pernah menjadi Ultraman di Galaxy Ultron Sakti.
+                Pernah mewakili bumi menyertai CTF peringkat Universe & mendapat tempat kedua setelah tewas di tangan Tony Stark. Selain daripada itu, pandai cuci lantai rumah, seorang penyayang kepada hidupan hidup. Bukan buaya, lebih kepada pecinta wanita.
+                Oh ya, peminat barangan Gaming & IT Stuff. 
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
