--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>SPM - Sekolah Menengah Kebangsaan</h3>
+                            <p>Mendapat pendidikan di Sekolah Menengah Kebangsaan xxxxxxxx . Mendapat 8A dalam peperiksaan PT3 & 4A dalam peperiksaan SPM. 
+                                Mempunyai pengalaman dalam bidang pengangjuran Event & aktif dalam bidang Kokurikulum sekolah.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>STPM - Sekolah Menengah Kebangsaan</h3>
+                            <p>Setelah habis tingkatan 5, terus melanjutkan pelajaran ke tingkatan 6. Seorang yang aktif ketika berada di tingkatan 6. Pernah terlibat secara langsung dengan aktiviti-aktivit sekolah. 
+                                Selain daripada itu, telah menghabiskan pelajaran dengan CGPA 3.0</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Master Degree - University</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>Degree - University</h3>
+                            <p>Under Maintenance.
+                                Comeback later.</p>
                         </div>
                     </div>
 
@@ -136,27 +136,27 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Web Deveoloper - Syarikat</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>Photographer - Freelance</h3>
+                            <p>Banyak buat kerja fotographi secara freelance. 
+                                Under maintenance.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Web Deveoloper - Syarikat</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>Web Deveoloper - Syarikat XXX</h3>
+                            <p>Under maintenance.
+                                Comeback later.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Web Deveoloper - Syarikat</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sequi asperiores suscipit at commodi 
-                                dolor aspernatur quia alias nemo? Consectetur.</p>
+                            <h3>Pentester - Syarikat</h3>
+                            <p>Under maintenance.
+                                Comeback later.</p>
                         </div>
                     </div>
 
