--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>SPM - Sekolah Menengah Kebangsaan</h3>
-                            <p>Mendapat pendidikan di Sekolah Menengah Kebangsaan xxxxxxxx . Mendapat 8A dalam peperiksaan PT3 & 4A dalam peperiksaan SPM. 
-                                Mempunyai pengalaman dalam bidang pengangjuran Event & aktif dalam bidang Kokurikulum sekolah.</p>
+                            <h3>SPM - Sekolah Menengah Kebangsaan Beaufort II</h3>
+                            <p>Mendapat pendidikan di Sekolah Menengah Kebangsaan Beaufort II . Mendapat 8A dalam peperiksaan PT3 & 4A dalam peperiksaan SPM. 
+                                Mempunyai pengalaman dalam bidang pengangjuran majlis-majlis & aktif dalam bidang Kokurikulum sekolah.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>STPM - Sekolah Menengah Kebangsaan</h3>
+                            <h3>STPM - Sekolah Menengah Kebangsaan Beaufort II</h3>
                             <p>Setelah habis tingkatan 5, terus melanjutkan pelajaran ke tingkatan 6. Seorang yang aktif ketika berada di tingkatan 6. Pernah terlibat secara langsung dengan aktiviti-aktivit sekolah. 
                                 Selain daripada itu, telah menghabiskan pelajaran dengan CGPA 3.0</p>
                         </div>
@@ -119,9 +119,8 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Degree - University</h3>
-                            <p>Under Maintenance.
-                                Comeback later.</p>
+                            <h3>Bachelor Of Information Technology (Hons) - UNITAR International University</h3>
+                            <p>First Year Student</p>
                         </div>
                     </div>
 
