--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Mangtx</span><span class="animate" style="--i:2;"></span></h1>
+            <h1>Hi, I'm <span>Eiman Haqimi</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>CyberSecurity Enthusiast</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Mempunyai pengalaman yang boleh dikatakan padu dalam bidang CyberSecurity selama tempoh xx Tahun. Pernah terlibat dengan OpenSource Project & mewakili negeri Sabah dalam pertandingan Lelaki Tertampan Di Bumi Tapops.
+            <p>Peminat tegar Linux. Pecinta IT & Minat Ethical Hacking
 
                 <span class="animate" style="--i:4;"></span>
             </p>
@@ -75,10 +75,10 @@
         </div>
 
         <div class="about-content">
-            <h3>Jejaka Tertampan Di Planet Tapops !<span class="animate scroll" style="--i:3;"></span></h3>
+            <h3>Who Am I ?<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Orangnya peramah, boleh dikatakan tampan & maskulin. Dia terkenal di seantero planet Tapops. Pernah menjadi Ultraman di Galaxy Ultron Sakti.
-                Pernah mewakili bumi menyertai CTF peringkat Universe & mendapat tempat kedua setelah tewas di tangan Tony Stark. Selain daripada itu, pandai cuci lantai rumah, seorang penyayang kepada hidupan hidup. Bukan buaya, lebih kepada pecinta wanita.
-                Oh ya, peminat barangan Gaming & IT Stuff. 
+               Pernah mewakili bumi menyertai CTF peringkat Universe & mendapat tempat kedua setelah tewas di tangan Tony Stark. Selain daripada itu, pandai cuci lantai rumah, seorang penyayang kepada hidupan hidup. Bukan buaya, lebih kepada pecinta wanita.
+               Oh ya, peminat barangan Gaming & IT Stuff. 
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
@@ -103,7 +103,7 @@
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
                             <h3>SPM - Sekolah Menengah Kebangsaan Beaufort II</h3>
                             <p>Mendapat pendidikan di Sekolah Menengah Kebangsaan Beaufort II . Mendapat 8A dalam peperiksaan PT3 & 4A dalam peperiksaan SPM. 
-                                Mempunyai pengalaman dalam bidang pengangjuran majlis-majlis & aktif dalam bidang Kokurikulum sekolah.</p>
+                               Mempunyai pengalaman dalam bidang pengangjuran majlis-majlis & aktif dalam bidang Kokurikulum sekolah.</p>
                         </div>
                     </div>
 
@@ -112,7 +112,7 @@
                             <div class="tahun"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
                             <h3>STPM - Sekolah Menengah Kebangsaan Beaufort II</h3>
                             <p>Setelah habis tingkatan 5, terus melanjutkan pelajaran ke tingkatan 6. Seorang yang aktif ketika berada di tingkatan 6. Pernah terlibat secara langsung dengan aktiviti-aktivit sekolah. 
-                                Selain daripada itu, telah menghabiskan pelajaran dengan CGPA 3.0</p>
+                               Selain daripada itu, telah menghabiskan pelajaran dengan CGPA 3.0</p>
                         </div>
                     </div>
 
