--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="tahun"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
+                            <div class="tahun"><i class='bx bxs-calendar'></i> 2024 - </div>
                             <h3>Bachelor Of Information Technology (Hons) - UNITAR International University</h3>
                             <p>First Year Student</p>
                         </div>
@@ -281,7 +281,7 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by Mangtx | Tertakluk Terma & Syarat</p>
+            <p>Copyright &copy; 2023 by Eiman Haqimi | Tertakluk Terma & Syarat</p>
 
             <span class="animate scroll" style="--i:1;"></span>
         </div>
