--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome The Ngentod Family | Mangtx</title>
+    <title>Welcome The Portfolio Website | Eiman</title>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -41,7 +41,7 @@
                 <h3>CyberSecurity Enthusiast</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Peminat tegar Linux. Pecinta IT & Minat Ethical Hacking
+            <p>Peminat tegar Linux. Pecinta IT & Minat Ethical Hacking.
 
                 <span class="animate" style="--i:4;"></span>
             </p>
